Display map and markers

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
+    "@beyonk/svelte-mapbox": "^8.1.4",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "rollup": "^2.3.4",
@@ -18,6 +19,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "mapbox-gl": "^2.6.1",
     "sirv-cli": "^1.0.0"
   }
 }
