Added some library

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sirv-cli": "^1.0.0",
     "svelte-counter": "^1.0.0",
     "svelte-frappe-charts": "^1.9.1",
+    "svelte-navigator": "^3.1.5",
     "uuid": "^8.3.2"
   }
 }
