--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.44.3"
   },
   "dependencies": {
     "mapbox-gl": "^2.6.1",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-navigator": "^3.1.5",
+    "sveltestrap": "^5.6.3"
   }
 }
